# polymind

./: .gitignore  PRODUCTION_GUIDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/instructions/: accounting.instructions.md  javascript.instructions.md  python.instructions.md  ts-js.instructions.md
.tools/: project_analyzer.py  project_structure.md
agents/ket-toan/experiencies/: bang_can_doi_ke_toan.md  vas_standard.md
agents/ket-toan/form/: bao_cao_luu_chuyen_tien_te_truc_tiep_mau_1.html  bao_cao_luu_chuyen_tien_te_truc_tiep_mau_2.html
backend/: app.py  config.py  main.py
backend/agents/: __init__.py  manager.py
backend/core/: __init__.py  lifecycle.py
backend/routes/: chat.py
backend/services/: __init__.py  chat.py  health.py
backend/utils/: __init__.py  async_logger.py  logger.py
backend/websocket/: __init__.py  chat_handler.py  connection_manager.py
docs/backend/: phase_1.md
docs/basic-design/piplines/: chat_pipeline.md  system_lifecycle.md
docs/frontend/: artist.md  phase_1.md
frontend/: app.js  chat.css  chat.html  chat.js  index.html  site.webmanifest  styles.css
frontend/.github/instructions/: ui_artist.instructions.md
mcp-server/: .env.example  .env.production.template  .gitignore  Dockerfile.prod  README.md  deploy-production.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
mcp-server/docs/: chain-of-thought.md  file-service.md  ingest_to_chromadb.py  ingest_vas_to_chromadb.py  luat_ke_toan_vietnam_2015.md  security-best-practices.md  vas_vietnam.md  vas_vietnam_chunked.json  vscode-chat-history-storage.md
mcp-server/docs/workflows/: ai-chunking-workflow.md  git-branching-workflow.md
mcp-server/odoo/odoo_v15/: docker-compose.yml
mcp-server/odoo/odoo_v16/: docker-compose.yml
mcp-server/odoo/odoo_v17/: docker-compose.yml
mcp-server/odoo/odoo_v18/: docker-compose.yml
mcp-server/ollama/: init-ollama.sh
mcp-server/postgres/conf/: postgresql.conf
mcp-server/postgres/init/: 01-init-database.sql
mcp-server/src/: config.ts  http-server.ts  server.ts
mcp-server/src/services/: ai-chunk-service.ts  base-service.ts  base.service.ts  calculator-service.ts  chromadb-service.ts  docker-service.ts  embedding-service.ts  index.ts  memory-service.ts  postgres-service.ts  postgres.service.ts  sequential-thinking-service.ts  time-service.ts  time.service.ts
mcp-server/test/: memory-service.test.ts
src/: __init__.py  main.py
src/adapters/: .gitkeep
src/agents/: deepseek.py  manager.py
src/services/: health.py
src/utils/: __init__.py
tests/client/: ask_deepseek.py
tests/sandbox/: demo_ai_chunk_service.py  test_ai_chunk_live.py
tests/unit/: test_ai_chunk_service.py
(+13 files in other folders)
