[project]
name = "polymind"
version = "0.1.0"
description = "Fast modern AI service framework"
authors = [{ name = "Tên bạn", email = "email@domain.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "httpx",
    "pydantic>=2.0",
    "python-dotenv",
    "typer",         # CLI optional
    "rich",          # Logging đẹp
    "psutil",        # Process management
]

[project.scripts]
polymind = "backend.main:main"
polymind-dev = "backend.main:dev_server"
polymind-prod = "backend.main:prod_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pyright]
include = ["backend"]
typeCheckingMode = "basic"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.metadata]
allow-direct-references = true
